# Source files
set( SOURCES
	ColorTableModel.cpp
	ColorTableView.cpp
	ConditionModel.cpp
	ConditionTabWidget.cpp
	ConditionView.cpp
	DataView.cpp
	DataViewWidget.cpp
	DBConnectionDialog.cpp
	GEOModels.cpp
	LineEditDialog.cpp
	LinesModel.cpp
	LineTabWidget.cpp
	Model.cpp
	MshEditDialog.cpp
	MshItem.cpp
	MshLayerMapper.cpp
	MshModel.cpp
	MshTabWidget.cpp
	PntsModel.cpp
	PntTabWidget.cpp
	SHPImportDialog.cpp
	StationTabWidget.cpp
	SurfaceModel.cpp
	SurfaceTabWidget.cpp
	VisPrefsDialog.cpp
	VisualizationWidget.cpp
)

# Moc Header files
set( MOC_HEADERS
	ColorTableModel.h
	ColorTableView.h
	ConditionModel.h
	ConditionTabWidget.h
	ConditionView.h
	DataView.h
	DataViewWidget.h
	DBConnectionDialog.h
	GEOModels.h
	LineEditDialog.h
	LinesModel.h
	LineTabWidget.h
	Model.h
	MshEditDialog.h
	MshModel.h
	MshTabWidget.h
	PntsModel.h
	PntTabWidget.h
	SHPImportDialog.h
	StationTabWidget.h
	SurfaceModel.h
	SurfaceTabWidget.h
	VisPrefsDialog.h
	VisualizationWidget.h
)

# Header files
set( HEADERS
	CondItem.h
	MshItem.h
	MshLayerMapper.h
        GeoTreeItem.h
)

# UI files
set( UIS
	ConditionTabWidgetBase.ui
	DataViewWidgetBase.ui
	DBConnection.ui
	GMSHPrefs.ui
	LineEdit.ui
	LineTabWidgetBase.ui
	MshEdit.ui
	MshTabWidgetBase.ui
	PntTabWidgetBase.ui
	StationTabWidgetBase.ui
	SurfaceTabWidgetBase.ui
	VisPrefs.ui
	VisualizationWidgetBase.ui
)

# Run Qts user interface compiler uic on .ui files
qt4_wrap_ui( UI_HEADERS ${UIS} )

# Run Qts meta object compiler moc on header files
qt4_wrap_cpp( MOC_SOURCES ${MOC_HEADERS} )


# Include the headers which are generated by uic and moc
# and include additional header
include_directories(
	.
	${CMAKE_BINARY_DIR}/Qt/Base
	${CMAKE_BINARY_DIR}/Qt/DataView
	${CMAKE_BINARY_DIR}/Qt/StationView/DiagramView
	${CMAKE_BINARY_DIR}/Qt/StationView
	../../Base
	../../MathLib
	../../GEO
	../../MSH
	../../FEM
	../../FileIO
	../Base
	../StationView
	../StationView/DiagramView
	../VtkVis
	../VtkAct
	${CMAKE_SOURCE_DIR}
	${Shapelib_INCLUDE_DIR}	
)

if (OGS_COMPILE_QVTK)
	include_directories(${CMAKE_BINARY_DIR}/Qt/QVTK ../QVTK)
endif (OGS_COMPILE_QVTK)

IF(VRPN_FOUND)
	INCLUDE_DIRECTORIES( ../Vrpn ${VRPN_INCLUDE_DIRS} )
ENDIF()

IF (OGS_USE_OPENSG)
	INCLUDE_DIRECTORIES( ${OpenSG_INCLUDE_DIRS} )
ENDIF (OGS_USE_OPENSG)

# Put moc files in a project folder
source_group("UI Files" REGULAR_EXPRESSION "\\w*\\.ui")
source_group("Moc Files" REGULAR_EXPRESSION "moc_.*")


# Create the library
add_library( QtDataView STATIC
	${SOURCES}
	${HEADERS}
	${MOC_HEADERS}
	${MOC_SOURCES}
	#${UI_HEADERS}
	${UIS}
)

# Link Qt library
target_link_libraries( QtDataView
	${QT_LIBRARIES}
	GEO
	FileIO
	MSH
	QtBase
	DiagramView
	StationView
	${Shapelib_LIBRARIES}
)
