# Source files
set( SOURCES
	ColorTableModel.cpp
	ColorTableView.cpp
	ConditionModel.cpp
	ConditionTabWidget.cpp
	ConditionView.cpp
	DatabaseConnection.cpp
	DataView.cpp
	DBConnectionDialog.cpp
	DiagramPrefsDialog.cpp
	GEOModels.cpp
	GeoTabWidget.cpp
	GeoTreeModel.cpp
	GeoTreeView.cpp
	GMSHPrefsDialog.cpp
	LineEditDialog.cpp
	ListPropertiesDialog.cpp
	ModelTreeItem.cpp
	MshEditDialog.cpp
	MshItem.cpp
	MshLayerMapper.cpp
	MshModel.cpp
	MshQualitySelectionDialog.cpp
	MshTabWidget.cpp
	OGSRaster.cpp
	QueryResultsDialog.cpp
	StationTabWidget.cpp
	StationTreeModel.cpp
	StationTreeView.cpp	
)

# Moc Header files
set( MOC_HEADERS
	ColorTableModel.h
	ColorTableView.h
	ConditionModel.h
	ConditionTabWidget.h
	ConditionView.h
	DatabaseConnection.h
	DataView.h
	DBConnectionDialog.h
	DiagramPrefsDialog.h
	GEOModels.h
	GeoTabWidget.h
	GeoTreeModel.h
	GeoTreeView.h
	GMSHPrefsDialog.h
	LineEditDialog.h
	ListPropertiesDialog.h
	MshEditDialog.h
	MshModel.h
	MshQualitySelectionDialog.h
	MshTabWidget.h
	QueryResultsDialog.h
	StationTabWidget.h
	StationTreeModel.h
	StationTreeView.h
)

# Header files
set( HEADERS
	BaseItem.h
	CondItem.h
	GeoObjectListItem.h
	GeoTreeItem.h
	ModelTreeItem.h
	MshItem.h
	MshLayerMapper.h
	OGSRaster.h
)

# UI files
set( UIS
	ConditionTabWidgetBase.ui
	DatabaseResultView.ui
	DBConnection.ui
	DiagramPrefs.ui
	GeoTabWidgetBase.ui
	GMSHPrefs.ui
	LineEdit.ui
	MshEdit.ui
	MshQualitySelection.ui
	MshTabWidgetBase.ui
	StationTabWidgetBase.ui
)

# Put filter in a folder
SOURCE_GROUP("Dialog Header Files" REGULAR_EXPRESSION "[.]*Dialog.h")
SOURCE_GROUP("Dialog Source Files" REGULAR_EXPRESSION "[.]*Dialog.cpp")
SOURCE_GROUP("Data Model Header Files" REGULAR_EXPRESSION "[.]*Item.h|[.]*Model.h|[.]*View.h")
SOURCE_GROUP("Data Model Source Files" REGULAR_EXPRESSION "[.]*Item.cpp|[.]*Model.cpp|[.]*View.cpp")

# Run Qts user interface compiler uic on .ui files
qt4_wrap_ui( UI_HEADERS ${UIS} )

# Run Qts meta object compiler moc on header files
qt4_wrap_cpp( MOC_SOURCES ${MOC_HEADERS} )


# Include the headers which are generated by uic and moc
# and include additional header
include_directories(
	.
	${CMAKE_BINARY_DIR}/Qt/Base
	${CMAKE_BINARY_DIR}/Qt/DataView
	${CMAKE_BINARY_DIR}/Qt/DataView/DiagramView
	${CMAKE_BINARY_DIR}/Qt/DataView/StratView
	../../Base
	../../MathLib
	../../GEO
	../../MSH
	../../FEM
	../../FileIO
	../Base
	./DiagramView
	./StratView
	../VtkVis
	${CMAKE_SOURCE_DIR}	
	#${OpenSG_INCLUDE_DIR}
	#${OpenSGSupportlibs_INCLUDE_DIR}
)

if (OGS_COMPILE_QVTK)
	include_directories(${CMAKE_BINARY_DIR}/Qt/QVTK ../QVTK)
endif (OGS_COMPILE_QVTK)

IF(VRPN_FOUND)
	INCLUDE_DIRECTORIES( ../Vrpn ${VRPN_INCLUDE_DIRS} )
ENDIF()

IF (OGS_USE_OPENSG)
	INCLUDE_DIRECTORIES( ${OpenSG_INCLUDE_DIRS} )
ENDIF (OGS_USE_OPENSG)

IF (Shapelib_FOUND)
	SET( ${SOURCES} SHPImportDialog.cpp)
	SET( ${MOC_HEADERS} SHPImportDialog.h)
	INCLUDE_DIRECTORIES( ${Shapelib_INCLUDE_DIR} )
ENDIF () # Shapelib_FOUND)
IF (libtiff_FOUND AND libgeotiff_FOUND)
	INCLUDE_DIRECTORIES( ${libtiff_INCLUDE_DIR}	${libgeotiff_INCLUDE_DIR} )
ENDIF () # libtiff_FOUND AND libgeotiff_FOUND

# Put moc files in a project folder
source_group("UI Files" REGULAR_EXPRESSION "\\w*\\.ui")
source_group("Moc Files" REGULAR_EXPRESSION "moc_.*")


# Create the library
add_library( QtDataView STATIC
	${SOURCES}
	${HEADERS}
	${MOC_HEADERS}
	${MOC_SOURCES}
	#${UI_HEADERS}
	${UIS}
)

# Link Qt library
target_link_libraries( QtDataView
	${QT_LIBRARIES}
	FEM
	FileIO
	GEO
	MSH
	QtBase
	DiagramView
	StratView
)

IF (Shapelib_FOUND)
	TARGET_LINK_LIBRARIES( QtDataView ${Shapelib_LIBRARIES} )
ENDIF () # Shapelib_FOUND
IF (libtiff_FOUND AND libgeotiff_FOUND)
	TARGET_LINK_LIBRARIES( QtDataView ${libtiff_LIBRARIES} ${libgeotiff_LIBRARIES} )
ENDIF () # libtiff_FOUND AND libgeotiff_FOUND
