# Source files
set( SOURCES
	ColorTableModel.cpp
	ColorTableView.cpp
	CondFromRasterDialog.cpp
	ConditionWriterDialog.cpp
	DatabaseConnection.cpp
	DataView.cpp
	DBConnectionDialog.cpp
	DirectConditionGenerator.cpp
	ElementTreeModel.cpp
	FEMConditionSetupDialog.cpp
	GEOModels.cpp
	GeoTabWidget.cpp
	GeoTreeModel.cpp
	GeoTreeView.cpp
	GMSHPrefsDialog.cpp
	LineEditDialog.cpp
	ListPropertiesDialog.cpp
	ModellingTabWidget.cpp
	ModelTreeItem.cpp
	MshEditDialog.cpp
	MshItem.cpp
	MshLayerMapper.cpp
	MshModel.cpp
	MshQualitySelectionDialog.cpp
	MshTabWidget.cpp
	NetCdfConfigureDialog.cpp
	NewProcessDialog.cpp
	ProcessModel.cpp
	ProcessView.cpp
	QueryResultsDialog.cpp
	SetNameDialog.cpp
	StationTabWidget.cpp
	StationTreeModel.cpp
	StationTreeView.cpp	
)

# Moc Header files
set( MOC_HEADERS
	ColorTableModel.h
	ColorTableView.h
	CondFromRasterDialog.h
	ConditionWriterDialog.h
	DatabaseConnection.h
	DataView.h
	DBConnectionDialog.h
	ElementTreeModel.h
	FEMConditionSetupDialog.h
	GEOModels.h
	GeoTabWidget.h
	GeoTreeModel.h
	GeoTreeView.h
	GMSHPrefsDialog.h
	LineEditDialog.h
	ListPropertiesDialog.h
	ModellingTabWidget.h
	MshEditDialog.h
	MshModel.h
	MshQualitySelectionDialog.h
	MshTabWidget.h
	NetCdfConfigureDialog.h
	NewProcessDialog.h
	ProcessModel.h
	ProcessView.h
	QueryResultsDialog.h
	SetNameDialog.h
	StationTabWidget.h
	StationTreeModel.h
	StationTreeView.h
)

# Header files
set( HEADERS
	BaseItem.h
	CondItem.h
	DirectConditionGenerator.h	
	CondObjectListItem.h
	GeoObjectListItem.h
	GeoTreeItem.h
	ModelTreeItem.h
	MshItem.h
	MshLayerMapper.h
	ProcessItem.h	
)

# UI files
set( UIS
	CondFromRaster.ui
	ConditionWriter.ui
	DatabaseResultView.ui
	DBConnection.ui
	FEMConditionSetup.ui
	GeoTabWidgetBase.ui
	GMSHPrefs.ui
	LineEdit.ui
	ModellingTabWidgetBase.ui
	MshEdit.ui
	MshQualitySelection.ui
	MshTabWidgetBase.ui
	NetCdfConfigure.ui
	NewProcess.ui
	StationTabWidgetBase.ui
)

IF (Shapelib_FOUND)
	SET( SOURCES ${SOURCES} SHPImportDialog.cpp)
	SET( MOC_HEADERS ${MOC_HEADERS} SHPImportDialog.h)
	INCLUDE_DIRECTORIES( ${Shapelib_INCLUDE_DIR} )
ENDIF () # Shapelib_FOUND

# Put filter in a folder
SOURCE_GROUP("Dialog Header Files" REGULAR_EXPRESSION "[.]*Dialog.h")
SOURCE_GROUP("Dialog Source Files" REGULAR_EXPRESSION "[.]*Dialog.cpp")
SOURCE_GROUP("Data Model Header Files" REGULAR_EXPRESSION "[.]*Item.h|[.]*Model.h|[.]*View.h")
SOURCE_GROUP("Data Model Source Files" REGULAR_EXPRESSION "[.]*Item.cpp|[.]*Model.cpp|[.]*View.cpp")

# Run Qts user interface compiler uic on .ui files
qt4_wrap_ui( UI_HEADERS ${UIS} )

# Run Qts meta object compiler moc on header files
qt4_wrap_cpp( MOC_SOURCES ${MOC_HEADERS} )


# Include the headers which are generated by uic and moc
# and include additional header
include_directories(
	${CMAKE_BINARY_DIR}/Qt/Base
	${CMAKE_BINARY_DIR}/Qt/DataView
	${CMAKE_BINARY_DIR}/Qt/DataView/DiagramView
	${CMAKE_BINARY_DIR}/Qt/DataView/StratView
	
	${CMAKE_SOURCE_DIR}/Base
	${CMAKE_SOURCE_DIR}/MathLib
	${CMAKE_SOURCE_DIR}/GEO
	${CMAKE_SOURCE_DIR}/MSH
	${CMAKE_SOURCE_DIR}/FEM
	${CMAKE_SOURCE_DIR}/FileIO
	${CMAKE_SOURCE_DIR}/Qt/Base
	${CMAKE_SOURCE_DIR}/Qt/DataView
	${CMAKE_SOURCE_DIR}/Qt/DataView/DiagramView
	${CMAKE_SOURCE_DIR}/Qt/DataView/StratView
	${CMAKE_SOURCE_DIR}/Qt/VtkVis
)

IF(VRPN_FOUND)
	INCLUDE_DIRECTORIES( ../Vrpn ${VRPN_INCLUDE_DIRS} )
ENDIF()

IF (OGS_USE_OPENSG)
	INCLUDE_DIRECTORIES( ${OpenSG_INCLUDE_DIRS} )
ENDIF (OGS_USE_OPENSG)

IF (libgeotiff_FOUND)
	INCLUDE_DIRECTORIES( ${libgeotiff_INCLUDE_DIR} ${libgeotiff_INCLUDE_DIR}/libxtiff ${VTK_DIR}/../Utilities/vtktiff )
ENDIF () # libgeotiff_FOUND

# Put moc files in a project folder
source_group("UI Files" REGULAR_EXPRESSION "\\w*\\.ui")
source_group("Moc Files" REGULAR_EXPRESSION "moc_.*")


# Create the library
add_library( QtDataView STATIC
	${SOURCES}
	${HEADERS}
	${MOC_HEADERS}
	${MOC_SOURCES}
	#${UI_HEADERS}
	${UIS}
)

# Link Qt library
target_link_libraries( QtDataView
	${QT_LIBRARIES}
	FEM
	FileIO
	GEO
	MSH
	QtBase
	DiagramView
	StratView
)

IF (Shapelib_FOUND)
	TARGET_LINK_LIBRARIES( QtDataView ${Shapelib_LIBRARIES} )
ENDIF () # Shapelib_FOUND
IF (libgeotiff_FOUND)
	TARGET_LINK_LIBRARIES( QtDataView ${libgeotiff_LIBRARIES} )
ENDIF () # libgeotiff_FOUND
