# Source files

GET_SOURCE_FILES(SOURCES_DISCRETELIB)
SET ( SOURCES ${SOURCES_DISCRETELIB})

GET_SOURCE_FILES(SOURCES_DOF DoF)
SET ( SOURCES ${SOURCES} ${SOURCES_DOF})

GET_SOURCE_FILES(SOURCES_CORE Core)
SET ( SOURCES ${SOURCES} ${SOURCES_CORE})

GET_SOURCE_FILES(SOURCES_ELEMENTWISEMANIPULATOR ElementWiseManipulator)
SET ( SOURCES ${SOURCES} ${SOURCES_ELEMENTWISEMANIPULATOR})

GET_SOURCE_FILES(SOURCES_SERIAL Serial)
SET ( SOURCES ${SOURCES} ${SOURCES_SERIAL})

# Create the library
ADD_LIBRARY( DiscreteLib STATIC ${SOURCES})

SET_TARGET_PROPERTIES(DiscreteLib PROPERTIES LINKER_LANGUAGE CXX)

INCLUDE_DIRECTORIES(
    .
    ..
)

TARGET_LINK_LIBRARIES( DiscreteLib 
    BaseLib 
    MathLib 
    MeshLib 
)

