IF (NOT VTK_FOUND)
	MESSAGE(FATAL_ERROR "Error: VTK was not found but is needed for the GUI. Aborting...")
ENDIF (NOT VTK_FOUND)
INCLUDE( ${VTK_USE_FILE} )

IF(VTKFBXCONVERTER_FOUND)
	ADD_DEFINITIONS(-DVTKFBXCONVERTER_FOUND)
	INCLUDE_DIRECTORIES(${VTKFBXCONVERTER_INCLUDE_DIRS})
ENDIF()

IF(VTKOSGCONVERTER_FOUND)
	ADD_DEFINITIONS(-DVTKOSGCONVERTER_FOUND)
	INCLUDE_DIRECTORIES(${VTKOSGCONVERTER_INCLUDE_DIRS})
ENDIF()

# Add subprojects
ADD_SUBDIRECTORY( Base )
ADD_SUBDIRECTORY( DataView/StratView )
ADD_SUBDIRECTORY( DataView )
ADD_SUBDIRECTORY( DataView/DiagramView )
ADD_SUBDIRECTORY( VtkVis )
ADD_SUBDIRECTORY( VtkAct )
IF(VRPN_FOUND AND OGS_USE_VRPN)
	ADD_SUBDIRECTORY( Vrpn )
ENDIF()
INCLUDE( DataExplorer.cmake )
